--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.6.12",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.6",
