--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.21.2",
     "jwt-decode": "^3.1.2",
     "vue": "^2.6.12",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
