--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "jwt-decode": "^3.1.2",
+    "uuid": "^8.3.2",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.0.1",
